# otus-hw

./: Cargo.toml
examples/: dynamic.rs  dynamic_decorator.rs  static.rs  static_decorator.rs  visitor.rs
src/: builder.rs  custom_reporter.rs  devices.rs  error.rs  house_dyn.rs  house_stat.rs  lib.rs  network.rs  tcp.rs
src/custom_reporter/: html.rs  json.rs
src/devices/: socket.rs  thermometer.rs
tests/: builder.rs  house_dyn.rs  house_stat.rs  http.rs
