[package]
name = "otus-hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
